@@ -86,7 +86,7 @@ def delete_branch(job: DeleteBranchJob):
 
     if job.settings.use_queue:
         queue_collection = build_queue_collection(job)
-        if queue_collection.has_version_queued_prs(del_branch.version):
+        if queue_collection.has_version_queued_prs(del_branch.version_t):
             raise exceptions.JobFailure('Requested branch %r cannot be '
                                         'deleted now due to queued data.' %
                                         del_branch)
